squishy responsive calendar + fix offsets

--- a/frontend/src/styles/calendar.scss
+++ b/frontend/src/styles/calendar.scss
@@ -128,19 +128,29 @@ $calendar-side-panel-content-radius: clamp(1rem, 4vmin, 5rem);
 .side-panel {
     position: fixed;
     top: 0;
-    right: -700px;
-    width: 700px;
+    right: -650px;
+    width: 650px;
     height: 100vh;
     background: var(--color-accent);
-    //box-shadow: -2px 0 4px rgba(0, 0, 0, 0.25);
     transition: right 0.3s ease;
-    z-index: 100;
+    z-index: 80;
     display: flex;
     flex-direction: column;
 }
 
 .side-panel.open {
     right: 0;
+}
+
+@media (max-width: 768px) {
+    .side-panel {
+        width: 100vw;
+        right: -100vw;
+    }
+
+    .side-panel.open {
+        right: 0;
+    }
 }
 
 .close-btn {
@@ -198,4 +208,53 @@ $calendar-side-panel-content-radius: clamp(1rem, 4vmin, 5rem);
 
 .edit-icon {
     justify-self: end;
+}
+
+@media (max-width: 768px) {
+
+  /* NO GAPS */
+  .calendar-container {
+      gap: 0.3em;
+      padding: 0.5em;
+      grid-template-rows:
+        auto
+        repeat(6, 1fr);
+  }
+
+  .calendar-header * {
+      font-size: 28px;
+  }
+
+  .calendar-cell-number {
+      width: auto;
+      height: auto;
+      padding: 0.25em 0.5em;
+      font-size: 16px;
+      border-radius: 0.5rem;
+      margin: 0;
+  }
+
+  .calendar-cell {
+      min-height: 0;
+      border-radius: 0.5rem;
+  }
+
+  /* NO SHADOWS */
+  .calendar-cell,
+  .calendar-days {
+      box-shadow: none;
+  }
+
+  .calendar-days h4 {
+      font-size: 16px;
+  }
+
+  .side-panel-header h1 {
+    font-size: 40px;
+    margin-bottom: -9px;
+  }
+
+  .arrow-icon {
+    width: 20px;
+}
 }
